@@ -158,6 +158,7 @@ Merged from DSE 5.0.x
  * Restore resumable hints delivery (CASSANDRA-11960)
  * Properly report LWT contention (CASSANDRA-12626)
 Merged from 3.0:
+ * Indexer is not correctly invoked when building indexes over sstables (CASSANDRA-13075)
  * Read repair is not blocking repair to finish in foreground repair (CASSANDRA-13115)
  * Stress daemon help is incorrect(CASSANDRA-12563)
  * Read repair is not blocking repair to finish in foreground repair (CASSANDRA-13115)
